--- a/src/Title.css
+++ b/src/Title.css
@@ -1,12 +1,18 @@
 .title-container {
-    background-color: #282c34;
-    border-radius: 10px;
-    padding: 20px;
+    background-color: #95a9d1;
+    border-radius: 100px;
     text-align: center;
+    padding-left: 30px;
+    padding-right: 30px;
     margin-top: 20px;
+    position: fixed;
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
 }
 
 .title {
     color: white;
-    font-size: 2em;
+    font-size: 32px;
 }
