--- a/src/Title.css
+++ b/src/Title.css
@@ -2,17 +2,12 @@
     background-color: #95a9d1;
     border-radius: 100px;
     text-align: center;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin-top: 40px;
-    position: fixed;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1000;
+    padding: 5px 40px;
+    margin: 20px auto;
+    width: fit-content;
 }
 
-.title {
+h1 {
     color: white;
     font-size: 32px;
 }
