--- a/src/Result.css
+++ b/src/Result.css
@@ -2,11 +2,13 @@
     background-color: #8bc790;
     border-radius: 100px;
     text-align: center;
-    padding: 20px 60px;
-    margin-top: 20px;
+    padding: 10px 40px;
+    margin-top: 25px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
     color: white;
     font-size: 20px;
     width: 250px;
+    font-size: 20px;
 }
