--- a/src/Module.css
+++ b/src/Module.css
@@ -10,6 +10,7 @@
     padding-right: 30px;
     padding-top: 20px;
     padding-bottom: 10px;
+    position: relative;
 }
 
 .module-row {
@@ -56,4 +57,16 @@
 .module-results {
     color: white;
     font-size: 20px;
+}
+
+.delete-button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 25px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    padding: 5px;
 }
