--- a/src/AddModuleButton.css
+++ b/src/AddModuleButton.css
@@ -1,5 +1,5 @@
 .add-module-button {
-    background-color: #af95d1;
+    background-color: #a682d4e8;
     color: white;
     font-size: 16px;
     padding: 10px 20px;
@@ -7,6 +7,8 @@
     border-radius: 20px;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
+    box-shadow: 0 8px 8px rgba(110, 19, 19, 0.1);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 .add-module-button:hover {
