--- a/src/Module.css
+++ b/src/Module.css
@@ -1,5 +1,5 @@
 .module-container {
-    background-color: #c7d2e9;
+    background-color: #f8f9fa94;
     border-radius: 40px;
     text-align: center;
     margin-top: 20px;
@@ -11,6 +11,7 @@
     padding-top: 20px;
     padding-bottom: 10px;
     position: relative;
+    box-shadow: 0 8px 8px rgba(110, 19, 19, 0.1);
 }
 
 .module-row {
@@ -27,7 +28,7 @@
 }
 
 .module-input label {
-    color: #163f74;
+    color: #301934;
     font-size: 18px;
     margin-right: 10px;
     width: 160px;
@@ -46,7 +47,7 @@
 }
 
 .module-input input:focus {
-    border: 2px solid #163f74;
+    border: 2px solid #ffd034;
     outline: none;
 }
 
@@ -55,14 +56,14 @@
 }
 
 .module-results {
-    color: white;
+    color: #301934d8;
     font-size: 20px;
 }
 
 .delete-button {
     background: none;
     border: none;
-    color: white;
+    color: #301934;
     font-size: 25px;
     cursor: pointer;
     position: absolute;
