--- a/src/Result.css
+++ b/src/Result.css
@@ -1,5 +1,5 @@
 .result-container {
-    background-color: #8bc790;
+    background-color: #7be684b6;
     border-radius: 100px;
     text-align: center;
     padding: 10px 40px;
@@ -11,4 +11,6 @@
     font-size: 20px;
     width: 250px;
     font-size: 20px;
+    box-shadow: 0 8px 8px rgba(110, 19, 19, 0.1);
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
