--- a/src/Title.css
+++ b/src/Title.css
@@ -1,13 +1,15 @@
 .title-container {
-    background-color: #95a9d1;
+    background-color: #9ab3e6d8;
     border-radius: 100px;
     text-align: center;
     padding: 5px 40px;
     margin: 20px auto;
     width: fit-content;
+    box-shadow: 0 8px 8px rgba(110, 19, 19, 0.1);
 }
 
 h1 {
     color: white;
     font-size: 32px;
+    text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
